--- a/index.html
+++ b/index.html
@@ -7,78 +7,122 @@
   </head>
   <body>
   <div class="container">
-    <div class="jmbotron">
-      <h1>Welcome to Wikipedia</h1>
-      <p>the free encyclopedia that anyone can edit.</p>
-      <p>5,412,478 articles in English</p>
+    <div class="row">
+      <div class="col-lg-1">
+    <div class ="sidebar">
+      <img id="logo" src="img/wiki_logo.png" alt="Wiki logo">
       <ul>
-        <li>Artis</li>
-        <li>Biography</li>
-        <li>Geography</li>
-        <li>History</li>
-        <li>Mathematics</li>
-        <li>Science</li>
-        <li>Society</li>
-        <li>Technology</li>
-        <li><emphasis>All portals</emphasis></li>
+        <li>Main page</li>
+        <li>Contents</li>
+        <li>Featured content</li>
+        <li>Current Events</li>
+        <li>Random Article</li>
+        <li>Donate to Wikipedia</li>
       </ul>
     </div>
-
-    <div class="row">
-      <div class="col-lg-6">
-        <h2>From today's featured article</h2>
-          <p>The Flying Eagle cent is a one-cent piece that was struck by the Mint of the United States as a pattern coin in 1856, and released for circulation on May 25, 1857. The coin was designed by Mint Chief Engraver James B. Longacre, with the eagle in flight based on the work of Longacre's predecessor, Christian Gobrecht. By the early 1850s, the large cent in circulation (about the size of a half dollar) was becoming both unpopular in commerce and expensive to coin. After experimenting with various sizes and compositions, the Mint decided on an alloy of 88% copper and 12% nickel for a new, smaller cent. After the Mint produced patterns with an 1856 date and gave them to legislators and officials, Congress formally authorized the new piece in February 1857. It was issued in exchange for the worn Spanish colonial silver coin that had circulated in the U.S. until then, as well as for its larger predecessor. So many cents were issued that they choked commercial channels, especially as they were not legal tender and no one had to take them. The eagle design did not strike well, and was replaced in 1859 by Longacre's Indian Head cent. (Full article...)</p>
+  </div>
+  <div class="col-lg-11">
+    <div class="jumbotron">
+      <div class="row">
+        <div class="col-lg-5">
+          <h1>Welcome to Wikipedia,</h1>
+          <p>the free encyclopedia that anyone can edit.</p>
+          <p>5,412,478 articles in English</p>
+        </div>
+            <div class="col-lg-2">
+              <ul>
+                <li>Artis</li>
+                <li>Biography</li>
+                <li>Geography</li>
+              </ul>
+            </div>
+            <div class="col-lg-2">
+              <ul>
+                <li>History</li>
+                <li>Mathematics</li>
+                <li>Science</li>
+              </ul>
+            </div>
+            <div class="col-lg-2">
+              <ul>
+                <li>Society</li>
+                <li>Technology</li>
+                <li><emphasis>All portals</emphasis></li>
+              </ul>
+            </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-6">
-        <h2>In the news</h2>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+      <div class="col-lg-5">
+        <div class="bg-success">
+          <div class="panel-heading">
+            <h2 class="panel-title-green">From today's featured article</h2>
+            <p>The Flying Eagle cent is a one-cent piece that was struck by the Mint of the United States as a pattern coin in 1856, and released for circulation on May 25, 1857. The coin was designed by Mint Chief Engraver James B. Longacre, with the eagle in flight based on the work of Longacre's predecessor, Christian Gobrecht. By the early 1850s, the large cent in circulation (about the size of a half dollar) was becoming both unpopular in commerce and expensive to coin. After experimenting with various sizes and compositions, the Mint decided on an alloy of 88% copper and 12% nickel for a new, smaller cent. After the Mint produced patterns with an 1856 date and gave them to legislators and officials, Congress formally authorized the new piece in February 1857. It was issued in exchange for the worn Spanish colonial silver coin that had circulated in the U.S. until then, as well as for its larger predecessor. So many cents were issued that they choked commercial channels, especially as they were not legal tender and no one had to take them. The eagle design did not strike well, and was replaced in 1859 by Longacre's Indian Head cent. (Full article...)</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-5">
+        <div class="bg-info">
+          <div class="panel-heading">
+            <h2 class="panel-title-blue">In the news</h2>
+            <ul>
+              <li>Philippine President Rodrigo Duterte (pictured) declares martial law in Mindanao amidst armed clashes with the Islamist Maute group in Marawi City.</li>
+              <li>A suicide bombing after an Ariana Grande concert at the Manchester Arena in the United Kingdom kills 22 people and injures more than 50 others.</li>
+              <li>In cricket, the Mumbai Indians win the Indian Premier League, defeating the Rising Pune Supergiant in the final.</li>
+              <li>Hassan Rouhani is re-elected President of Iran.</li>
+              <li>Salvador Sobral, representing Portugal, wins the Eurovision Song Contest with the song "Amar pelos dois".</li>
+              <li>A large-scale cyber attack involving ransomware causes severe disruption around the world.</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-6">
-        <h2>Did you know...</h2>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
+      <div class="col-lg-5">
+        <div class="bg-success">
+          <div class="panel-heading">
+            <h2 class="panel-title-green">Did you know...</h2>
+            <ul>
+              <li>... that Botticelli's four panels with Scenes from the Life of Saint Zenobius (detail pictured) are split among three museums?</li>
+              <li>... that the Custer Wolf, a North American gray wolf referred to as the "master criminal of the animal world", killed livestock worth almost $300,000 in today's money?</li>
+              <li>... that Margot Shiner, who fled Nazi Germany as a teenager, was instrumental in establishing the medical subspecialty of paediatric gastroenterology?</li>
+              <li>... that the glass-floor observation deck of Ulubey Canyon Nature Park is 131 m (430 ft) above the canyon floor?</li>
+              <li>... that Albert Pierce Taylor, author of Under Hawaiian Skies, attempted to join the Cuban War of Independence but was deported by the Spanish?</li>
+              <li>... that The Duals' "Stick Shift" was the first hot rod song to chart nationally in the United States?</li>
+              <li>... that Narendra Kumar is the co-developer of the Dorokhov-Mello-Pereyra-Kumar equation, a theory on multi-channel conductivity using the </li>
+              <li>... that in 1979, Somerset deliberately lost a cricket match in 18 minutes?</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+    <div class="col-lg-5">
+      <div class="bg-info">
+        <div class="panel-heading">
+          <h2 class="panel-title-blue">On this day...</h2>
+          <ul>
+            <li>1810 – The Primera Junta, the first independent government in Argentina, was established in an open cabildo in Buenos Aires, marking the end of the May Revolution.</li>
+            <li>1878 – Gilbert and Sullivan's comic opera H.M.S. Pinafore (poster featured) opened at the Opera Comique in London.</li>
+            <li>1977 – Star Wars, a science fantasy film written and directed by George Lucas, was released, eventually becoming one of the most successful films of all time.</li>
+            <li>2009 – North Korea conducted a nuclear test and several other missile tests that were widely condemned by the international community and led to sanctions from the United Nations Security Council.</li>
+          </ul>
+        </div>
       </div>
     </div>
+  </div>
 
-    <div class="row">
-      <div class="col-lg-6">
-        <h2>On this day...</h2>
-        <ul>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
-        </ul>
-      </div>
+  <div class="row">
+    <div class="col-lg-11">
+      <div class="bg-purple">
+      <h2 class="panel-title">Today's featured picture</h2>
+      <img id="monastery" src="img/todays_featured_pic.jpeg" alt="Scots Monastery">
+      <p>The Scots Monastery is the former Benedictine Abbey of St James in Regensburg, Germany. It was founded in the 11th century by Irish missionaries and for most of its history was in the hands of first Irish, then Scottish monks. It has been used as a seminary for the Roman Catholic Diocese of Regensburg since 1862.</p>
     </div>
-
-
-
-
-
-
-
+  </div>
+</div>
   </div>
   </body>
 </html>
