add pictures, style sidebar

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
   <div class="container">
     <div class="row">
-      <div class="col-lg-1">
-    <div class ="sidebar">
+      <div class="col-lg-2">
+    <div class="sidebar">
       <img id="logo" src="img/wiki_logo.png" alt="Wiki logo">
       <ul>
         <li>Main page</li>
@@ -18,10 +18,30 @@
         <li>Current Events</li>
         <li>Random Article</li>
         <li>Donate to Wikipedia</li>
+        <li>Interaction</li>
+        <li>Help</li>
+        <li>About Wikipedia</li>
+        <li>Community portal</li>
+        <li>Recent changes</li>
+        <li>Contact page</li>
+        <li>Tools</li>
+        <li>What links here</li>
+        <li>Related changes</li>
+        <li>Upload file</li>
+        <li>Special pages</li>
+        <li>Permanent link</li>
+        <li>Page information</li>
+        <li>Wikidata item</li>
+        <li>Print/export</li>
+        <li>Create a book</li>
+        <li>Download as PDF</li>
+        <li>Printable version</li>
+        <li>In other projects</li>
+
       </ul>
     </div>
   </div>
-  <div class="col-lg-11">
+  <div class="col-lg-10">
     <div class="jumbotron">
       <div class="row">
         <div class="col-lg-5">
@@ -54,19 +74,23 @@
     </div>
 
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="bg-success">
           <div class="panel-heading">
             <h2 class="panel-title-green">From today's featured article</h2>
+            <img id="coin" src="img/coin.png" alt="Coin">
             <p>The Flying Eagle cent is a one-cent piece that was struck by the Mint of the United States as a pattern coin in 1856, and released for circulation on May 25, 1857. The coin was designed by Mint Chief Engraver James B. Longacre, with the eagle in flight based on the work of Longacre's predecessor, Christian Gobrecht. By the early 1850s, the large cent in circulation (about the size of a half dollar) was becoming both unpopular in commerce and expensive to coin. After experimenting with various sizes and compositions, the Mint decided on an alloy of 88% copper and 12% nickel for a new, smaller cent. After the Mint produced patterns with an 1856 date and gave them to legislators and officials, Congress formally authorized the new piece in February 1857. It was issued in exchange for the worn Spanish colonial silver coin that had circulated in the U.S. until then, as well as for its larger predecessor. So many cents were issued that they choked commercial channels, especially as they were not legal tender and no one had to take them. The eagle design did not strike well, and was replaced in 1859 by Longacre's Indian Head cent. (Full article...)</p>
+            <p>Recently featured: U.S. Route 113 Zenobia Vampire</p>
+            <p>Archive By email More featured articles...</p>
           </div>
         </div>
       </div>
 
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="bg-info">
           <div class="panel-heading">
             <h2 class="panel-title-blue">In the news</h2>
+            <img id="duterte" src="img/duterte.jpeg" alt="Duerte">
             <ul>
               <li>Philippine President Rodrigo Duterte (pictured) declares martial law in Mindanao amidst armed clashes with the Islamist Maute group in Marawi City.</li>
               <li>A suicide bombing after an Ariana Grande concert at the Manchester Arena in the United Kingdom kills 22 people and injures more than 50 others.</li>
@@ -75,16 +99,19 @@
               <li>Salvador Sobral, representing Portugal, wins the Eurovision Song Contest with the song "Amar pelos dois".</li>
               <li>A large-scale cyber attack involving ransomware causes severe disruption around the world.</li>
             </ul>
+            <p>Ongoing: Battle of Mosul</p>
+            <p>Recent deaths: Wayne Walker Jacque Fresco Roger Ailes Chris Cornell</p>
           </div>
         </div>
       </div>
     </div>
 
     <div class="row">
-      <div class="col-lg-5">
+      <div class="col-lg-6">
         <div class="bg-success">
           <div class="panel-heading">
             <h2 class="panel-title-green">Did you know...</h2>
+            <img id="miracle" src="img/miracle.jpeg" alt= "miracle painting">
             <ul>
               <li>... that Botticelli's four panels with Scenes from the Life of Saint Zenobius (detail pictured) are split among three museums?</li>
               <li>... that the Custer Wolf, a North American gray wolf referred to as the "master criminal of the animal world", killed livestock worth almost $300,000 in today's money?</li>
@@ -99,10 +126,11 @@
         </div>
       </div>
 
-    <div class="col-lg-5">
+    <div class="col-lg-6">
       <div class="bg-info">
         <div class="panel-heading">
           <h2 class="panel-title-blue">On this day...</h2>
+          <img id="poster" src="img/poster.jpeg" alt = "poster">
           <ul>
             <li>1810 – The Primera Junta, the first independent government in Argentina, was established in an open cabildo in Buenos Aires, marking the end of the May Revolution.</li>
             <li>1878 – Gilbert and Sullivan's comic opera H.M.S. Pinafore (poster featured) opened at the Opera Comique in London.</li>
@@ -117,7 +145,7 @@
   <div class="row">
     <div class="col-lg-11">
       <div class="bg-purple">
-      <h2 class="panel-title">Today's featured picture</h2>
+      <h2 class="panel-title-purple">Today's featured picture</h2>
       <img id="monastery" src="img/todays_featured_pic.jpeg" alt="Scots Monastery">
       <p>The Scots Monastery is the former Benedictine Abbey of St James in Regensburg, Germany. It was founded in the 11th century by Irish missionaries and for most of its history was in the hands of first Irish, then Scottish monks. It has been used as a seminary for the Roman Catholic Diocese of Regensburg since 1862.</p>
     </div>
