add spacing and style sidebar

--- a/index.html
+++ b/index.html
@@ -11,20 +11,24 @@
       <div class="col-lg-2">
     <div class="sidebar">
       <img id="logo" src="img/wiki_logo.png" alt="Wiki logo">
+      <h3>Main page</h3>
       <ul>
-        <li>Main page</li>
         <li>Contents</li>
         <li>Featured content</li>
         <li>Current Events</li>
         <li>Random Article</li>
         <li>Donate to Wikipedia</li>
-        <li>Interaction</li>
+      </ul>
+      <h3>Interaction</h3>
+      <ul>
         <li>Help</li>
         <li>About Wikipedia</li>
         <li>Community portal</li>
         <li>Recent changes</li>
         <li>Contact page</li>
-        <li>Tools</li>
+      </ul>
+        <h3>Tools</h3>
+      <ul>
         <li>What links here</li>
         <li>Related changes</li>
         <li>Upload file</li>
@@ -36,8 +40,6 @@
         <li>Create a book</li>
         <li>Download as PDF</li>
         <li>Printable version</li>
-        <li>In other projects</li>
-
       </ul>
     </div>
   </div>
