add nav bar and search bar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,34 @@
     <title>Wikipedia, the free encyclopedia</title>
   </head>
   <body>
-  <div class="container">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6">
+          <ul class="nav nav-tabs" id="left_tabs">
+            <li role="presentation" class="active"><a href="#">Main Page</a></li>
+            <li role="presentation" class="active"><a href="#">Talk</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3">
+          <ul class="nav nav-tabs" id="right_tabs">
+              <li role="presentation" class="active"><a href="#">Read</a></li>
+              <li role="presentation" class="active"><a href="#">View source</a></li>
+              <li role="presentation" class="active"><a href="#">View history</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-3">
+          <div class="search">
+            <form action="http://www.wikipedia.org/search.php">
+            <input type="text" name="search" placeholder="Search Wikipedia"/>
+            </form>
+          </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="row">
       <div class="col-lg-2">
     <div class="sidebar">
