final tweaks, fixed sp error

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
             <div class="col-lg-2">
               <ul>
-                <li>Artis</li>
+                <li>Arts</li>
                 <li>Biography</li>
                 <li>Geography</li>
               </ul>
@@ -97,7 +97,7 @@
               <ul>
                 <li>Society</li>
                 <li>Technology</li>
-                <li><emphasis>All portals</emphasis></li>
+                <li><strong>All portals</strong></li>
               </ul>
             </div>
       </div>
